--- a/manpages/man5/job-yaml-v12.html
+++ b/manpages/man5/job-yaml-v12.html
@@ -262,6 +262,14 @@ sequence:
 	>Job group name</p
 	></dd
       ><dt
+      ><code
+	>multipleExecutions</code
+	></dt
+      ><dd
+      ><p
+	>'true/false': if true, the job can have more than one execution at once.</p
+	></dd
+      ><dt
       ><a href="#options"
 	><code
 	  >options</code
